--- a/.github/workflows/action.js.yml
+++ b/.github/workflows/action.js.yml
@@ -21,8 +21,10 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm install yarn
+    - name: install npm
+      run: npm install
+    - name: install yarn
+      run: npm install yarn
     - name: React-Tests
       run: yarn test
     - name: Deploy
