--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -24,5 +24,5 @@ jobs:
     - name: Install yarn
       run: npm install -g yarn
     - name: Run Tests
-      run: yarn test
+      run: yarn run test
 
