--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -10,7 +10,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  Test-And-Deploy:
 
     runs-on: ubuntu-latest
 
@@ -21,9 +21,13 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
+        
     - name: Install Dependencies
       run: yarn install
 
     - name: Run Unit Tests
       run: yarn test
+      
+    - name: Deploy HomePage
+      run: yarn deploy
 
