--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -35,6 +35,15 @@ jobs:
       run: npm install --save gh-pages
       
     - name: Deploy Homepage
-      run: yarn deploy
+      run: |
+        git config --global user.name $user_name
+        git config --global user.email $user_email
+        git remote set-url origin https://${github_token}@github.com/${repository}
+        yarn deploy
+      env:
+        user_name: 'github-actions[bot]'
+        user_email: 'github-actions[bot]@users.noreply.github.com'
+        github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
+        repository: ${{ github.repository }}
       
 
